[WIP] とりあえず管理系の画面をこしらえつつある

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
-<h1>{{ title }} Is Running!</h1>
+<h1>{{ title }}</h1>
 <ul>
+  <li><a [routerLink]="'/login'">Login</a></li>
   <li><a [routerLink]="'/home'">Home</a></li>
-  <li><a [routerLink]="'/top'">Top</a></li>
 </ul>
 
 <router-outlet></router-outlet>
