[WIP] 登録とログイン処理まで作った

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,3 @@
 <h2>ホーム画面</h2>
+<p><button type="button" (click)="test()">Test</button></p>
+<p><button type="button" (click)="logout()">Logout</button></p>
