--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{ title }}</h1>
 <ul>
   <li><a [routerLink]="'/login'">Login</a></li>
+  <li><a [routerLink]="'/signup'">Sign Up</a></li>
   <li><a [routerLink]="'/home'">Home</a></li>
 </ul>
 
