--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,11 +1,14 @@
 <h2>ログイン画面</h2>
-<dl>
-  <dt>ユーザ名</dt>
-  <dd><input type="text" placeholder="User Name"></dd>
-  <dt>パスワード</dt>
-  <dd><input type="password" placeholder="Password"></dd>
-</dl>
-<p><button type="button" [routerLink]="'/home'">ログイン</button></p>
+<form [formGroup]="form" (ngSubmit)="login()">
+  <dl>
+    <dt>ユーザ名</dt>
+    <dd><input type="text" placeholder="User Name" formControlName="name"></dd>
+    <dt>パスワード</dt>
+    <dd><input type="password" placeholder="Password" formControlName="password"></dd>
+  </dl>
+  <p><button type="submit" [disabled]="form.invalid">ログイン</button></p>
+</form>
+<p *ngIf="error != null">{{ error }}</p>
 
 <hr>
-<p><a [routerLink]="'/admin/login'">管理者画面に移動する</a></p>
+<p><a [routerLink]="'/signup'">ユーザ登録する</a></p>
