--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,5 +1,59 @@
-h1 {
-  border-bottom: 1px solid #ccc;
-  padding-bottom: .2rem;
-  font-size: 1.2rem;
+.app {
+  --max-width: 60vw;
+  padding-bottom: 2rem;
+}
+/* 幅が狭くなったら画面いっぱいに表示する */
+@media (max-width: 900px) {
+  .app { --max-width: 80vw; }
+}
+@media (max-width: 600px) {
+  .app { --max-width: calc(100vw - 3rem); }
+}
+
+.header {
+  background: #07f;
+}
+
+.header-inner {
+  margin: 0 auto 1rem;
+  padding: .75rem 0;
+  max-width: var(--max-width);
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 1rem;
+  color: #fff;
+  white-space: nowrap;
+}
+
+.header-inner > h1 {
+  margin: 0;
+  font-size: 1rem;
+}
+
+.header-inner > div {
+  text-align: right;
+}
+.header-inner > div ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.header-inner > div ul li {
+  display: inline-block;
+}
+.header-inner > div ul li:not(:first-child) {
+  padding-left: .75rem;
+}
+
+.header-inner a {
+  color: inherit;
+  text-decoration: none;
+}
+.header-inner a:hover {
+  text-decoration: underline;
+}
+
+.main {
+  margin: 0 auto;
+  max-width: var(--max-width);
 }
