--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,7 +1,14 @@
-<h2>ホーム画面</h2>
-<p>ようこそ {{ name }} さん</p>
-<ul>
-  <li><a [routerLink]="['/users', name]">自分のプロフィールページ</a></li>
+<p><b>@{{ name }}</b></p>
+<app-post></app-post>
+
+<ul class="menu">
+  <li><a [routerLink]="['/users', name]">My Profile</a></li>
+  <li>Notifications</li>  <!-- TODO : 通知画面・各種 Inbox イベントの際に永続化が必要 -->
+  <li>Followers</li>      <!-- TODO : フォロワー一覧・実現のためにはフォローされた時にデータ永続化が必要 -->
+  <li>Following</li>      <!-- TODO : フォロー中一覧・実現のためにはフォローしに行く検索画面が必要 -->
 </ul>
+
+<hr>
 <p><button type="button" (click)="test()">API Test (See Console)</button></p>
-<p><button type="button" (click)="logout()">Logout</button></p>
+
+<p class="text-right"><button type="button" (click)="logout()">Logout</button></p>
