--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,14 +1,16 @@
-<h2>ログイン画面</h2>
-<form [formGroup]="form" (ngSubmit)="login()">
-  <dl>
-    <dt>ユーザ名</dt>
-    <dd><input type="text" placeholder="User Name" formControlName="name"></dd>
-    <dt>パスワード</dt>
-    <dd><input type="password" placeholder="Password" formControlName="password"></dd>
-  </dl>
-  <p><button type="submit" [disabled]="form.invalid">ログイン</button></p>
-</form>
-<p *ngIf="error != null">{{ error }}</p>
-
-<hr>
-<p><a [routerLink]="'/signup'">ユーザ登録する</a></p>
+<ng-container *ngIf="isLoaded">
+  <h2>Login</h2>
+  <form [formGroup]="form" (ngSubmit)="login()">
+    <dl>
+      <dt>ユーザ名</dt>
+      <dd><input type="text" placeholder="User Name" formControlName="name"></dd>
+      <dt>パスワード</dt>
+      <dd><input type="password" placeholder="Password" formControlName="password"></dd>
+    </dl>
+    <p><button type="submit" [disabled]="form.invalid || isProcessing">ログイン</button></p>
+  </form>
+  <app-error [error]="error"></app-error>
+  
+  <hr>
+  <p><a [routerLink]="'/signup'">ユーザ登録する</a></p>
+</ng-container>
