--- a/frontend/src/app/users/user.component.html
+++ b/frontend/src/app/users/user.component.html
@@ -1,8 +1,10 @@
-<h2>ユーザプロフィール画面</h2>
-<dl>
-  <dt>ユーザ名</dt>
-  <dd>{{ name }}</dd>
-  <dt>登録日</dt>
-  <dd>TODO</dd>
-</dl>
-<p><a [routerLink]="'/home'">ホームに戻る</a></p>
+<app-loading *ngIf="user == null"></app-loading>
+<ng-container *ngIf="user != null">
+  <h2>Profile</h2>
+  <dl>
+    <dt>ユーザ名</dt>
+    <dd>{{ user.name }}</dd>
+    <dt>登録日</dt>
+    <dd>{{ user.createdAt }}</dd>
+  </dl>
+</ng-container>
