--- a/frontend/src/app/notifications/notifications.component.html
+++ b/frontend/src/app/notifications/notifications.component.html
@@ -6,10 +6,7 @@
   
   <dl *ngIf="notifications.length > 0">
     <ng-container *ngFor="let notification of notifications">
-      <dt>
-        {{ notification.createdAt }} … @{{ notification.actorName }}
-        <ng-container *ngIf="notification.remoteHost != null">@{{ notification.remoteHost }}</ng-container>
-      </dt>
+      <dt>{{ notification.createdAt }} … @{{ notification.actorName }}<ng-container *ngIf="notification.remoteHost != null">@{{ notification.remoteHost }}</ng-container></dt>
       <dd>
         <div *ngIf="notification.type === 'follow'">フォローされました</div>
         <div *ngIf="notification.type === 'like'">ふぁぼられました</div>
