--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   <li><a [routerLink]="['/users', name]">My Profile</a></li>
   <li><a [routerLink]="['/notifications']">Notifications</a></li>
   <li><a [routerLink]="['/users', name, 'followers']">Followers</a></li>
-  <li>Following</li>  <!-- TODO : フォロー中一覧・実現のためにはフォローしに行く検索画面が必要 -->
+  <li>Following</li>
 </ul>
 
 <p class="text-right"><button type="button" (click)="logout()">Logout</button></p>
