--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,11 +1,12 @@
-<p><b>@{{ name }}</b></p>
-<app-post></app-post>
+<h2>@{{ name }}</h2>
+<app-new-post></app-new-post>
 
 <ul class="menu">
   <li><a [routerLink]="['/users', name]">My Profile</a></li>
   <li><a [routerLink]="['/notifications']">Notifications</a></li>
   <li><a [routerLink]="['/users', name, 'followers']">Followers</a></li>
   <li>Following</li>
+  <li><a [routerLink]="['/users', name, 'posts']">Posts</a></li>
 </ul>
 
 <p class="text-right"><button type="button" (click)="logout()">Logout</button></p>
