--- a/frontend/src/app/shared/components/loading/loading.component.html
+++ b/frontend/src/app/shared/components/loading/loading.component.html
@@ -1,1 +1,4 @@
-<div class="loader"><span>Loading...</span></div>
+<div class="loader-wrapper">
+  <div class="loader"><span>Loading...</span></div>
+</div>
+
