--- a/frontend/src/app/users/user.component.html
+++ b/frontend/src/app/users/user.component.html
@@ -1,10 +1,16 @@
 <app-loading *ngIf="user == null"></app-loading>
-<ng-container *ngIf="user != null">
-  <h2>Profile</h2>
+<div *ngIf="user != null" class="container">
+  <h2>@{{ user.name }}</h2>
   <dl>
     <dt>ユーザ名</dt>
     <dd>{{ user.name }}</dd>
     <dt>登録日</dt>
     <dd>{{ user.createdAt }}</dd>
   </dl>
-</ng-container>
+  <p *ngIf="user.name === authUserName">それはあなたです!</p>
+  <ul>
+    <li><a [routerLink]="['/users', user.name, 'followers']">Followers</a></li>
+    <li>Following</li>
+    <li><a [routerLink]="['/users', user.name, 'posts']">Posts</a></li>
+  </ul>
+</div>
