--- a/frontend/src/app/shared/components/loading/loading.component.css
+++ b/frontend/src/app/shared/components/loading/loading.component.css
@@ -1,26 +1,38 @@
+.loader-wrapper {
+  opacity: 0;
+  animation: wrapper .12s 1s linear forwards;  /* 1秒後にふわっとローディングスピナーが表示される */
+}
+@keyframes wrapper {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
 .loader,
 .loader:after {
   border-radius: 50%;
-  width : 7rem;
-  height: 7rem;
+  width : 2.5rem;
+  height: 2.5rem;
 }
 .loader {
   margin: 60px auto;
   position: relative;
-  border-top   : 1rem solid rgba(0, 128, 255, .2);
-  border-right : 1rem solid rgba(0, 128, 255, .2);
-  border-bottom: 1rem solid rgba(0, 128, 255, .2);
-  border-left  : 1rem solid rgba(0, 128, 255, 1);
+  border-top   : .4rem solid rgba(0, 128, 255, .2);
+  border-right : .4rem solid rgba(0, 128, 255, .2);
+  border-bottom: .4rem solid rgba(0, 128, 255, .2);
+  border-left  : .4rem solid rgba(0, 128, 255, 1);
   transform: translateZ(0);
   animation: load 1.1s infinite linear;
 }
 @keyframes load {
   0% {
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   100% {
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
