--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -74,3 +74,15 @@ h2, p, ul {
 
 
 .text-right { text-align: right; }
+
+.container {
+  animation: load .12s linear;
+}
+@keyframes load {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
