[WIP] 検索窓を作った

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <h2>Home</h2>
 <app-new-post></app-new-post>
+<app-search></app-search>
 
 <ul class="menu">
   <li><a [routerLink]="['/users', name]">My Profile</a></li>
