[WIP] ワケ分かんなくなってきた

--- a/frontend/src/app/users/followers/followers.component.html
+++ b/frontend/src/app/users/followers/followers.component.html
@@ -5,8 +5,8 @@
   
   <dl *ngIf="followers.length > 0">
     <ng-container *ngFor="let follower of followers">
-      <dt><a [href]="follower.actorUrl">@{{ follower.followerName }}</a></dt>
-      <dd>{{ follower.createdAt }} 〜</dd>
+      <dt><a [href]="follower.url">@{{ follower.followerName }}<ng-container *ngIf="follower.followerRemoteHost != null">@{{ follower.followerRemoteHost }}</ng-container></a></dt>
+      <dd>フォロー日 : {{ follower.createdAt }} 〜 (<a [href]="follower.actorUrl">Actor URL</a>・<a [href]="follower.inboxUrl">Inbox URL</a>)</dd>
     </ng-container>
   </dl>
 </div>
