--- a/frontend/src/app/users/user.component.html
+++ b/frontend/src/app/users/user.component.html
@@ -8,6 +8,9 @@
     <dd>{{ user.createdAt }}</dd>
   </dl>
   <p *ngIf="user.name === authUserName">それはあなたです!</p>
+  <p *ngIf="user.name !== authUserName">
+    <app-follow-button></app-follow-button>
+  </p>
   <ul>
     <li><a [routerLink]="['/users', user.name, 'followers']">Followers</a></li>
     <li>Following</li>
