--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <li><a [routerLink]="['/users', name]">My Profile</a></li>
   <li><a [routerLink]="['/notifications']">Notifications</a></li>
   <li><a [routerLink]="['/users', name, 'followers']">Followers</a></li>
-  <li>Following</li>
+  <li><a [routerLink]="['/users', name, 'followings']">Followings</a></li>
   <li><a [routerLink]="['/users', name, 'posts']">Posts</a></li>
 </ul>
 
